--- a/index.html
+++ b/index.html
@@ -52,14 +52,15 @@
 
           <h4>Demonstration of collaborative video editing on Wikipedia</h4>
           <p><a href="http://www.benmoskowitz.com/?p=1083">Summary post</a></p>
-          <p><a href="http://www.benmoskowitz.com/?p=1083">Demonstration link</a></p>
+          <p><a href="#">Demonstration link</a></p>
           <p><a href="https://github.com/mozilla/popcorn-editor">Source code</a></p>
           <h4>Reading</h4>
           <ul>
-            <li>MIT example</li>
-            <li>trends educational video</li>
-            <li><a href="https://medium.com/@cshirky/the-digital-revolution-in-higher-education-has-already-happened-no-one-noticed-78ec0fec16c7#.82bto95i0">digital revolution in higher ed</a></li>
+            <li><a href="pdf/INT_video_wikipedia.pdf">Video for Wikipedia and the Open Web: A Guide to Best Practices for Cultural and Educational Institutions (2010)</a></li>
+            <li><a href="pdf/LetsTalkVideo.pdf">Overview of current Wikimedia technical initiatives re: video</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Wiki_Makes_Video">Wiki Makes Video, hub for focused collaboration among Wikipedians</li>
             <li>outlines for Intelligent TV stuff?</li>
+            <li><a href="https://medium.com/@cshirky/the-digital-revolution-in-higher-education-has-already-happened-no-one-noticed-78ec0fec16c7#.82bto95i0">digital revolution in higher ed</a></li>
           </ul>
 
 </ul>
@@ -67,13 +68,13 @@
         </div>
 
         <div class="col-lg-6">
-          <h4>Goal #1: Tools</h4>
+          <h4>Goal #1: Develop tools</h4>
           <p>Deployment of tools that facilitate open licensing, open distribution, remix and editing of open video content</p>
 
-          <h4>Goal #2: Content partnerships</h4>
+          <h4>Goal #2: Develop content partnerships</h4>
           <p>Coordinate case studies of projects, such as MOOCs or documentaries, which could be completely “open sourced” with metadata and open licensing down to each individual asset. Document benefits to producers and facilitate compliance with open access mandates.</p>
 
-          <h4>Goal #3: Models for learner engagement</h4>
+          <h4>Goal #3: Develop models for learner engagement</h4>
           <p>Pilot models for learner engagement with open video, such as assigning “video essays” or Wikipedia in the classroom, that demonstrate the pedagogical / constructivist value of a significant Commons of video. (e.g., university students producing video-enabled Wikipedia entries as part of coursework; high-school students developing media literacy education through deconstructing / re- contextualizing televised political debates; other benefits to “end users”)</p>
         </div>
       </div>
