--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <h4>What</h4>
+          <h4>Why We're Getting Together</h4>
           <p>This workshop will result in better understanding and working relationships across stakeholders (platforms, producers, teachers, funders and users) working in open content and open video. We will develop user-centric stories about what becomes possible through the deployment of public infrastructure for open video (which will enable us to subsequently prototype and test these ideas). Finally, we will seek to surface the possibility of jointly developing flagship projects to move faster as a field.</p>
 
           <h4>Demonstration of collaborative video editing on Wikipedia</h4>
@@ -72,9 +72,9 @@
           <p>Deployment of tools that facilitate open licensing, open distribution, remix and editing of open video content</p>
 
           <h4>Goal #2: Develop content partnerships</h4>
-          <p>Coordinate case studies of projects, such as MOOCs or documentaries, which could be completely “open sourced” with metadata and open licensing down to each individual asset. Document benefits to producers and facilitate compliance with open access mandates.</p>
+          <p>Coordinate case studies and produce projects—such as MOOCs, documentaries and archives—which can be completely “open sourced” with metadata and open licensing down to each individual asset. Document benefits to producers and facilitate compliance with open access mandates.</p>
 
-          <h4>Goal #3: Develop models for learner engagement</h4>
+          <h4>Goal #3: Develop models for learning</h4>
           <p>Pilot models for learner engagement with open video, such as assigning “video essays” or Wikipedia in the classroom, that demonstrate the pedagogical / constructivist value of a significant Commons of video. (e.g., university students producing video-enabled Wikipedia entries as part of coursework; high-school students developing media literacy education through deconstructing / re- contextualizing televised political debates; other benefits to “end users”)</p>
         </div>
       </div>
