--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body style="background: url('img/wiki2.png') top 10px right 25% no-repeat;">
 
-    <div class="container">
+    <div class="container" style="margin-top: 20px">
 
 
-      <div style="background: url('img/wiki2.png') bottom right no-repeat">
+      <div>
         <h1>Video & the Commons 2016</h1>
-        <p class="lead">January 19th, 2016</p>
-        <p class="lead">NYU ITP: 721 Broadway, 4th Floor, room ?</p>
-        <p class="lead">Let's accelerate the production and re-use of openly-licensed video. <a href="pdf/invite.pdf">Invitation [pdf]</a></p>
+        <p class="lead">January 19th, 2016 / 721 Broadway, New York - 4th Floor</p>
+        <p class>Let's accelerate the production and re-use of openly-licensed video. <a href="pdf/invite.pdf">Invitation.</a></p>
+        <br>
         <p><a class="btn btn-lg btn-success" href="https://docs.google.com/forms/d/184oTgGsvtAjkl0zdyNXmIPv1oVqvkeyUlLd_jGqDWrU/viewform" role="button">Get involved</a></p>
       </div>
 
-      <div class="row marketing">
+      <div class="row marketing" style="margin-top: 30px;">
         <div class="col-lg-6">
           <h4>Why We're Getting Together</h4>
-          <p>This workshop will result in better understanding and working relationships across stakeholders (platforms, producers, teachers, funders and users) working in open content and open video. We will develop user-centric stories about what becomes possible through the deployment of public infrastructure for open video (which will enable us to subsequently prototype and test these ideas). Finally, we will seek to surface the possibility of jointly developing flagship projects to move faster as a field.</p>
+          <p>This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will jointly develop flagship projects to move faster as a field.  We will tell our stories about what becomes possible when we deploy public infrastructure for open video.</p>
 
           <h4>Demonstration of collaborative video editing on Wikipedia</h4>
           <p><a href="http://www.benmoskowitz.com/?p=1083">Summary post</a></p>
@@ -56,11 +56,22 @@
           <p><a href="https://github.com/mozilla/popcorn-editor">Source code</a></p>
           <h4>Reading</h4>
           <ul>
-            <li><a href="pdf/INT_video_wikipedia.pdf">Video for Wikipedia and the Open Web: A Guide to Best Practices for Cultural and Educational Institutions (2010)</a></li>
             <li><a href="pdf/LetsTalkVideo.pdf">Overview of current Wikimedia technical initiatives re: video</a></li>
+
+            <li><a href="pdf/SOTC2015_final.pdf">State of the Commons 2015 (Creative Commons)</a></li>
+
+            <li><a href="pdf/INT_video_wikipedia.pdf">Video for Wikipedia and the Open Web: A Guide to Best Practices for Cultural and Educational Institutions (2010)</a></li>
+
+            <li><a href="pdf/Rijksmuseum.pdf">Democratising the Rijksmuseum — Why did the Rijksmuseum make available their highest quality material without restrictions, and what are the results?</a></li>
+
+            <li><a href="pdf/DutchCulturalHeritage.docx">Dutch Cultural Heritage Reaches Millions Every Month - on Wikipedia</a></li>
+
+            <li><a href="pdf/Wikipedia.1506.07608">Amplifying the Impact of Open Access: Wikipedia and the Diffusion of Science</a></li>
+
             <li><a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Wiki_Makes_Video">Wiki Makes Video, hub for focused collaboration among Wikipedians</li>
-            <li>outlines for Intelligent TV stuff?</li>
-            <li><a href="https://medium.com/@cshirky/the-digital-revolution-in-higher-education-has-already-happened-no-one-noticed-78ec0fec16c7#.82bto95i0">digital revolution in higher ed</a></li>
+
+            <li><a href="https://library.theengineroom.org/microtasking/">Micro-tasking: overview of current approaches</a></li>
+
           </ul>
 
 </ul>
@@ -68,24 +79,17 @@
         </div>
 
         <div class="col-lg-6">
-          <h4>Goal #1: Develop tools</h4>
-          <p>Deployment of tools that facilitate open licensing, open distribution, remix and editing of open video content</p>
+          <h4>Goal #1: Tools</h4>
+          <p>Build and deploy tools that facilitate open licensing, open distribution, remix and editing of open video content.</p>
 
-          <h4>Goal #2: Develop content partnerships</h4>
-          <p>Coordinate case studies and produce projects—such as MOOCs, documentaries and archives—which can be completely “open sourced” with metadata and open licensing down to each individual asset. Document benefits to producers and facilitate compliance with open access mandates.</p>
+          <h4>Goal #2: Content</h4>
+          <p>Produce projects, such as MOOCs or documentaries, open by default – in ways that are completely “open sourced” with metadata and licensing down to each individual asset. Document the benefits to producers and facilitate compliance with open access mandates.</p>
 
-          <h4>Goal #3: Develop models for learning</h4>
-          <p>Pilot models for learner engagement with open video, such as assigning “video essays” or Wikipedia in the classroom, that demonstrate the pedagogical / constructivist value of a significant Commons of video. (e.g., university students producing video-enabled Wikipedia entries as part of coursework; high-school students developing media literacy education through deconstructing / re- contextualizing televised political debates; other benefits to “end users”)</p>
+          <h4>Goal #3: Education</h4>
+          <p>Pilot educational models for learner engagement with open video, including learning through video production and remix.</p>
         </div>
       </div>
 
-        <div class="col-lg-6">
-
-        </div>
-
-        <div class="col-lg-6">
-          <h4>Attendees</h4>
-        </div>
         
       <footer class="footer">
         <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
