--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
         <h1>Video & the Commons 2016</h1>
         <p class="lead">January 19th, 2016 / 721 Broadway, New York - 4th Floor</p>
         <p class>Let's accelerate the production and re-use of openly-licensed video. <a href="pdf/invite.pdf">Invitation.</a></p>
-        <br>
         <p><a class="btn btn-lg btn-success" href="https://docs.google.com/forms/d/184oTgGsvtAjkl0zdyNXmIPv1oVqvkeyUlLd_jGqDWrU/viewform" role="button">Get involved</a></p>
       </div>
 
@@ -50,27 +49,29 @@
           <h4>Why We're Getting Together</h4>
           <p>This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will jointly develop flagship projects to move faster as a field.  We will tell our stories about what becomes possible when we deploy public infrastructure for open video.</p>
 
-          <h4>Demonstration of collaborative video editing on Wikipedia</h4>
+          <h4>Collaborative video editing on Wikipedia</h4>
           <p><a href="http://www.benmoskowitz.com/?p=1083">Summary post</a></p>
-          <p><a href="#">Demonstration link</a></p>
+          <!-- <p><a href="#">Demonstration link</a></p> NOT YET -->
           <p><a href="https://github.com/mozilla/popcorn-editor">Source code</a></p>
-          <h4>Reading</h4>
+          <h4>Recommended reading</h4>
           <ul>
-            <li><a href="pdf/LetsTalkVideo.pdf">Overview of current Wikimedia technical initiatives re: video</a></li>
+            <li><a href="http://www.benmoskowitz.com/?p=1083">Now’s the time for collaborative video on Wikipedia (2015)</a></li>
 
-            <li><a href="pdf/SOTC2015_final.pdf">State of the Commons 2015 (Creative Commons)</a></li>
+            <li><a href="pdf/LetsTalkVideo.pdf">Current Wikimedia video tech initiatives (2016)</a></li>
+
+            <li><a href="pdf/SOTC2015_final.pdf">State of the Commons (2015)</a></li>
 
             <li><a href="pdf/INT_video_wikipedia.pdf">Video for Wikipedia and the Open Web: A Guide to Best Practices for Cultural and Educational Institutions (2010)</a></li>
 
-            <li><a href="pdf/Rijksmuseum.pdf">Democratising the Rijksmuseum — Why did the Rijksmuseum make available their highest quality material without restrictions, and what are the results?</a></li>
+            <li><a href="pdf/DutchCulturalHeritage.docx">Dutch Cultural Heritage Reaches Millions Every Month - on Wikipedia (2015)</a></li>
 
-            <li><a href="pdf/DutchCulturalHeritage.docx">Dutch Cultural Heritage Reaches Millions Every Month - on Wikipedia</a></li>
+            <li><a href="pdf/Rijksmuseum.pdf">Democratising the Rijksmuseum (2014)</a></li>
 
-            <li><a href="pdf/Wikipedia.1506.07608">Amplifying the Impact of Open Access: Wikipedia and the Diffusion of Science</a></li>
+            <li><a href="pdf/Wikipedia.1506.07608">Amplifying the Impact of Open Access: Wikipedia and the Diffusion of Science (2015)</a></li>
 
-            <li><a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Wiki_Makes_Video">Wiki Makes Video, hub for focused collaboration among Wikipedians</li>
+            <li><a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Wiki_Makes_Video">Wiki Makes Video, hub for focused collaboration among Wikipedians (2013)</li>
 
-            <li><a href="https://library.theengineroom.org/microtasking/">Micro-tasking: overview of current approaches</a></li>
+            <li><a href="https://library.theengineroom.org/microtasking/">Micro-tasking: overview of current approaches (2016)</a></li>
 
           </ul>
 
