Swapped in new style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <title>Video & the Commons 2016</title>
 
     <!-- Bootstrap core CSS -->
@@ -19,7 +19,7 @@
     <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="jumbotron-narrow.css" rel="stylesheet">
+    <link href="css/cover.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -32,73 +32,78 @@
     <![endif]-->
   </head>
 
-  <body style="background: url('img/wiki2.png') top 10px right 25% no-repeat;">
+  <body>
 
-    <div class="container" style="margin-top: 20px">
+    <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="inner cover">
+            <h1 class="cover-heading">VIDEO & THE COMMONS 2016</h1>
+            <p class="lead linkcolor">January 19th, 2016 9:30am - 4:00pm / <a href="https://www.google.com/maps/place/Broadway+Block,+721+Broadway,+New+York,+NY+10003/@40.7295102,-73.9960319,17z/data=!3m1!4b1!4m2!3m1!1s0x89c2599a88751e4d:0x4285031f1a917fc1
+">721 Broadway, New York - 4th Floor</a></p>
+          <p>This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will tell our stories about what becomes possible with public infrastructure, and develop flagship projects to move the field forward.</p>
+
+          </div>
 
 
-      <div>
-        <h1>Video & the Commons 2016</h1>
-        <p class="lead">January 19th, 2016 / 721 Broadway, New York - 4th Floor</p>
-        <p class>Let's accelerate the production and re-use of openly-licensed video. <a href="pdf/invite.pdf">Invitation.</a></p>
-        <p><a class="btn btn-lg btn-success" href="https://docs.google.com/forms/d/184oTgGsvtAjkl0zdyNXmIPv1oVqvkeyUlLd_jGqDWrU/viewform" role="button">Get involved</a></p>
-      </div>
+          <div class="row marketing">
+                  <div class="col-md-4">
+                    <h4>Tools</h4>
+                    <p>Build and deploy tools that facilitate open licensing, open distribution, remix and editing of open video content.</p>
+                  </div>
+                  <div class="col-md-4">
+                    <h4>Content</h4>
+                    <p>Produce projects, such as MOOCs or documentaries, open by default –  with open metadata and licensing for each asset.</p>
+                 </div>
+                  <div class="col-md-4">
+                    <h4>Education</h4>
+                    <p>Pilot educational models for learner engagement with open video, including learning through video production & remix.</p>
+                  </div>
+          </div>
 
-      <div class="row marketing" style="margin-top: 30px;">
-        <div class="col-lg-6">
-          <h4>Why We're Getting Together</h4>
-          <p>This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will jointly develop flagship projects to move faster as a field.  We will tell our stories about what becomes possible when we deploy public infrastructure for open video.</p>
+          <div class="row marketing col-md-8 left">
+          <h4>Recommended reading</h4>
+            <ul>
+              <li><a href="http://www.benmoskowitz.com/?p=1083">Now’s the time for collaborative video on Wikipedia</a> (2015)</li>
+              <li><a href="pdf/LetsTalkVideo.pdf">Current Wikimedia video tech initiatives</a> (2016)</li>
+              <li><a href="pdf/SOTC2015_final.pdf">State of the Commons</a> (2015)</li>
+              <li><a href="pdf/INT_video_wikipedia.pdf">Video for Wikipedia and the Open Web: A Guide to Best Practices for Cultural and Educational Institutions</a> (2010)</li>
+              <li><a href="pdf/DutchCulturalHeritage.docx">Dutch Cultural Heritage Reaches Millions Every Month - on Wikipedia</a> (2015)</li>
+              <li><a href="pdf/Rijksmuseum.pdf">Democratising the Rijksmuseum</a> (2014)</li>
+              <li><a href="pdf/Wikipedia.1506.07608">Amplifying the Impact of Open Access: Wikipedia and the Diffusion of Science</a> (2015)</li>
+              <li><a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Wiki_Makes_Video">WikiMakesVideo, hub for collaboration among Wikipedians</a> (2013)</li>
+              <li><a href="https://library.theengineroom.org/microtasking/">Micro-tasking: overview of current approaches</a> (2016)</li>
+            </ul>
+          </div>
 
+          <div class="row marketing col-md-8 left">
           <h4>Collaborative video editing on Wikipedia</h4>
-          <p><a href="http://www.benmoskowitz.com/?p=1083">Summary post</a></p>
+          <p><a href="#">Testbed - link TBD</a></p>
           <!-- <p><a href="#">Demonstration link</a></p> NOT YET -->
           <p><a href="https://github.com/mozilla/popcorn-editor">Source code</a></p>
-          <h4>Recommended reading</h4>
-          <ul>
-            <li><a href="http://www.benmoskowitz.com/?p=1083">Now’s the time for collaborative video on Wikipedia (2015)</a></li>
+          </div>
 
-            <li><a href="pdf/LetsTalkVideo.pdf">Current Wikimedia video tech initiatives (2016)</a></li>
-
-            <li><a href="pdf/SOTC2015_final.pdf">State of the Commons (2015)</a></li>
-
-            <li><a href="pdf/INT_video_wikipedia.pdf">Video for Wikipedia and the Open Web: A Guide to Best Practices for Cultural and Educational Institutions (2010)</a></li>
-
-            <li><a href="pdf/DutchCulturalHeritage.docx">Dutch Cultural Heritage Reaches Millions Every Month - on Wikipedia (2015)</a></li>
-
-            <li><a href="pdf/Rijksmuseum.pdf">Democratising the Rijksmuseum (2014)</a></li>
-
-            <li><a href="pdf/Wikipedia.1506.07608">Amplifying the Impact of Open Access: Wikipedia and the Diffusion of Science (2015)</a></li>
-
-            <li><a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Wiki_Makes_Video">Wiki Makes Video, hub for focused collaboration among Wikipedians (2013)</li>
-
-            <li><a href="https://library.theengineroom.org/microtasking/">Micro-tasking: overview of current approaches (2016)</a></li>
-
-          </ul>
-
-</ul>
+          <div class="mastfoot">
+            <div class="inner">
+        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
+            </div>
+          </div>
 
         </div>
 
-        <div class="col-lg-6">
-          <h4>Goal #1: Tools</h4>
-          <p>Build and deploy tools that facilitate open licensing, open distribution, remix and editing of open video content.</p>
-
-          <h4>Goal #2: Content</h4>
-          <p>Produce projects, such as MOOCs or documentaries, open by default – in ways that are completely “open sourced” with metadata and licensing down to each individual asset. Document the benefits to producers and facilitate compliance with open access mandates.</p>
-
-          <h4>Goal #3: Education</h4>
-          <p>Pilot educational models for learner engagement with open video, including learning through video production and remix.</p>
-        </div>
       </div>
 
-        
-      <footer class="footer">
-        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
-      </footer>
+    </div>
 
-    </div> <!-- /container -->
-
-
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
