--- a/index2.html
+++ b/index2.html
@@ -44,23 +44,23 @@
             <h1 class="cover-heading">VIDEO & THE COMMONS 2016</h1>
             <p class="lead linkcolor">January 19th, 2016 9:30am - 4:00pm / <a href="https://www.google.com/maps/place/Broadway+Block,+721+Broadway,+New+York,+NY+10003/@40.7295102,-73.9960319,17z/data=!3m1!4b1!4m2!3m1!1s0x89c2599a88751e4d:0x4285031f1a917fc1
 ">721 Broadway, New York - 4th Floor</a></p>
-          <p>This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will tell our stories about what becomes possible with public infrastructure, and develop flagship projects to move the field forward.</p>
+          <p>This workshop will build stronger relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will tell our stories about what becomes possible with public infrastructure, and develop flagship projects to move the field forward.</p>
 
           </div>
 
 
           <div class="row marketing">
                   <div class="col-md-4">
-                    <h4>Morning: Tools</h4>
-                    <p>Collaborate to build and deploy tools that facilitate open licensing, open distribution, remix and editing of open video content.</p>
+                    <h4>Tools</h4>
+                    <p>Build and deploy tools that facilitate open licensing, open distribution, remix and editing of open video content.</p>
                   </div>
                   <div class="col-md-4">
-                    <h4>Lunch: Content</h4>
-                    <p>Imagine projects, such as MOOCs or documentaries, open by default –  with open metadata and licensing for each asset.</p>
+                    <h4>Content</h4>
+                    <p>Produce projects, such as MOOCs or documentaries, open by default –  with open metadata and licensing for each asset.</p>
                  </div>
                   <div class="col-md-4">
-                    <h4>Afternoon: Education</h4>
-                    <p>Sketch out pilots to test models for video in learning, including student production & remix. Explore benefits for ecosystem.</p>
+                    <h4>Education</h4>
+                    <p>Pilot educational models for learner engagement with open video, including learning through video production & remix.</p>
                   </div>
           </div>
 
