--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
               <li><a href="pdf/Rijksmuseum.pdf">Democratising the Rijksmuseum</a> (2014)</li>
               <li><a href="pdf/Wikipedia.1506.07608">Amplifying the Impact of Open Access: Wikipedia and the Diffusion of Science</a> (2015)</li>
               <li><a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Wiki_Makes_Video">WikiMakesVideo, hub for collaboration among Wikipedians</a> (2013)</li>
+              <li><a href="http://www.pbslearningmedia.org/resource/avd09.pd.tavidprod/learning-through-video-production/">PBS LearningMedia: Learning Through Video Production</a> (2014)</li>
               <li><a href="https://library.theengineroom.org/microtasking/">Micro-tasking: overview of current approaches</a> (2016)</li>
             </ul>
           </div>
