--- a/index-hidden.html
+++ b/index-hidden.html
@@ -64,6 +64,12 @@
                   </div>
           </div>
 
+          <div class="row marketing col-md-8 left">
+          </div>
+
+          <div class="row marketing col-md-8 left">
+          </div>
+
           <div class="mastfoot">
             <div class="inner">
         <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a>
