--- a/index-hidden.html
+++ b/index-hidden.html
@@ -32,7 +32,7 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body style="background: #333 url('../img/Wikipedia-logo-v3.svg.png') bottom -100px right no-repeat;">
 
     <div class="site-wrapper">
 
