--- a/index.html
+++ b/index.html
@@ -30,6 +30,28 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+<!-- for Google -->
+<meta name="description" content="Information and links for January 19th meeting" />
+<meta name="keywords" content="collaborative video open video creative commons openly licensed" />
+
+<meta name="author" content="" />
+<meta name="copyright" content="" />
+<meta name="application-name" content="" />
+
+<!-- for Facebook -->          
+<meta property="og:title" content="Video & The Commons 2016" />
+<meta property="og:type" content="article" />
+<meta property="og:image" content="http://benrito.github.io/video-commons2016/img/Wikipedia-logo-v2.svg.png" />
+<meta property="og:url" content="" />
+<meta property="og:description" content="This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will tell our stories about what becomes possible with public infrastructure, and develop flagship projects to move the field forward." />
+
+<!-- for Twitter -->          
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="Video & The Commons 2016" />
+<meta name="twitter:description" content="This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will tell our stories about what becomes possible with public infrastructure, and develop flagship projects to move the field forward" />
+<meta name="twitter:image" content="http://benrito.github.io/video-commons2016/img/Wikipedia-logo-v2.svg.png" />
+
   </head>
 
   <body>
