--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <meta property="og:title" content="Video & The Commons 2016" />
 <meta property="og:type" content="article" />
 <meta property="og:image" content="http://benrito.github.io/video-commons2016/img/Wikipedia-logo-v2.svg.png" />
-<meta property="og:url" content="" />
+<meta property="og:url" content="http://benrito.github.io/video-commons2016/" />
 <meta property="og:description" content="This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will tell our stories about what becomes possible with public infrastructure, and develop flagship projects to move the field forward." />
 
 <!-- for Twitter -->          
