Img tweak metadata

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!-- for Facebook -->          
 <meta property="og:title" content="Video & The Commons 2016" />
 <meta property="og:type" content="article" />
-<meta property="og:image" content="http://benrito.github.io/video-commons2016/img/Wikipedia-logo-v2.svg.png" />
+<meta property="og:image" content="http://benrito.github.io/video-commons2016/img/photo.jpg" />
 <meta property="og:url" content="http://benrito.github.io/video-commons2016/" />
 <meta property="og:description" content="This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will tell our stories about what becomes possible with public infrastructure, and develop flagship projects to move the field forward." />
 
@@ -50,7 +50,7 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Video & The Commons 2016" />
 <meta name="twitter:description" content="This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will tell our stories about what becomes possible with public infrastructure, and develop flagship projects to move the field forward" />
-<meta name="twitter:image" content="http://benrito.github.io/video-commons2016/img/Wikipedia-logo-v2.svg.png" />
+<meta name="twitter:image" content="http://benrito.github.io/video-commons2016/img/photo.jpg" />
 
   </head>
 
@@ -70,7 +70,7 @@
             <img src="img/photo.jpg" style="border: 2px solid white;">
             <br>
             <br>
-          <p>The goal of this working group is to improve coordination between stakeholders (platforms, producers, educators, funders, and users) working with open video content. We collaborate on technical initiatives and open content productions in order to move the field forward.</p>
+          <p>This working group coordinates and catalyzes stakeholders in open video content. We push forward on technical initiatives such as collaborative video production as well as new open content productions involving public media institutions, universities, and archives.</p>
           </div>
 
 
