--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h1 class="cover-heading">VIDEO & THE COMMONS 2016</h1>
             <p class="lead linkcolor">January 19th, 2016 9:30am - 4:00pm / <a href="https://www.google.com/maps/place/Broadway+Block,+721+Broadway,+New+York,+NY+10003/@40.7295102,-73.9960319,17z/data=!3m1!4b1!4m2!3m1!1s0x89c2599a88751e4d:0x4285031f1a917fc1
 ">721 Broadway, New York - 4th Floor</a></p>
-            <img src="https://benrito.github.io/video-commons2016/img/photo.jpg" style="border: 2px solid white;">
+            <img src="https://benrito.github.io/video-commons2016/img/v&c_photo.jpg" style="border: 2px solid white;">
             <br>
             <br>
           <p>This working group coordinates and catalyzes stakeholders in open video content. We push forward on technical initiatives such as collaborative video production as well as new open content productions involving public media institutions, universities, and archives.</p>
