Added get in touch link

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
           </div>
 
           <div class="row marketing col-md-8 left">
+          <h4>Contact</h4>
+          <p><a href="https://docs.google.com/forms/d/184oTgGsvtAjkl0zdyNXmIPv1oVqvkeyUlLd_jGqDWrU/viewform">Get involved</a></p>
+          <p><br><br></p>
+          <p><br><br></p>
           </div>
           
           <div class="mastfoot">
