Added two readings

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
           <div class="row marketing col-md-8 left">
           <h4>Recommended reading</h4>
             <ul>
+              <li><a href="http://hewlett.org/blog/posts/investing-openness">Investing in Openness</a> (2016)</li>
               <li><a href="http://www.benmoskowitz.com/?p=1083">Now’s the time for collaborative video on Wikipedia</a> (2015)</li>
               <li><a href="pdf/LetsTalkVideo.pdf">Current Wikimedia video tech initiatives</a> (2016)</li>
               <li><a href="pdf/SOTC2015_final.pdf">State of the Commons</a> (2015)</li>
@@ -87,7 +88,8 @@
               <li><a href="pdf/Wikipedia.1506.07608">Amplifying the Impact of Open Access: Wikipedia and the Diffusion of Science</a> (2015)</li>
               <li><a href="https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Wiki_Makes_Video">WikiMakesVideo, hub for collaboration among Wikipedians</a> (2013)</li>
               <li><a href="http://www.pbslearningmedia.org/resource/avd09.pd.tavidprod/learning-through-video-production/">PBS LearningMedia: Learning Through Video Production</a> (2014)</li>
-              <li><a href="https://library.theengineroom.org/microtasking/">Micro-tasking: overview of current approaches</a> (2016)</li>
+              <li><a href="pdf/Rosenzweig.2006.pdf">Micro-tasking: overview of current approaches</a> (2016)</li>
+              <li><a href="https://library.theengineroom.org/microtasking/">Can History Be Open Source? Wikipedia and the Future of the Past</a> (2006)</li>
             </ul>
           </div>
 
