--- a/index.html
+++ b/index.html
@@ -52,6 +52,19 @@
 <meta name="twitter:description" content="This workshop will build better relationships between stakeholders (platforms, producers, educators, funders, and users) working with open content and open video. We will tell our stories about what becomes possible with public infrastructure, and develop flagship projects to move the field forward" />
 <meta name="twitter:image" content="http://benrito.github.io/video-commons2016/img/photo.jpg" />
 
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-73693806-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
   </head>
 
   <body>
